feat: add free text input for evaluation

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "[1744 rows x 13 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
        "[231 rows x 3 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,18 +472,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "output = {}\n",
     "\n",
+    "free_text_questions = [\n",
+    "  {\n",
+    "      'question': 'Commendable Areas observed',\n",
+    "      'type': 'text_area',\n",
+    "      'response': None\n",
+    "  },\n",
+    "  {\n",
+    "      'question': 'Suggested areas for parents to positively encourage at home',\n",
+    "      'type': 'text_area',\n",
+    "      'response': None\n",
+    "  },\n",
+    "  {\n",
+    "      'question': 'Potential areas',\n",
+    "      'type': 'text_area',\n",
+    "      'response': None\n",
+    "  },\n",
+    "]\n",
+    "\n",
     "for idx, row in questions.iterrows():\n",
     "  if not output.get(row['DOMAIN']):\n",
     "    output[row['DOMAIN']] = {}\n",
     "  if not output[row['DOMAIN']].get(row['SUB CATEGORY']):\n",
-    "    output[row['DOMAIN']][row['SUB CATEGORY']] = []\n",
-    "  output[row['DOMAIN']][row['SUB CATEGORY']].append({'question': row['SKILL'], 'response': None})\n",
+    "    output[row['DOMAIN']][row['SUB CATEGORY']] = free_text_questions\n",
+    "  output[row['DOMAIN']][row['SUB CATEGORY']].insert(0, {'question': row['SKILL'], 'response': None})\n",
     "\n",
     "json.dump(output, open('updatedQuestions.json', 'w'), indent=4)\n"
    ]
