feat: add closing questions to question bank

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import json"
+    "import json\n",
+    "import copy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +303,7 @@
        "[1744 rows x 13 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +460,7 @@
        "[231 rows x 3 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,17 +481,7 @@
     "\n",
     "free_text_questions = [\n",
     "  {\n",
-    "      'question': 'Commendable Areas observed',\n",
-    "      'type': 'text_area',\n",
-    "      'response': None\n",
-    "  },\n",
-    "  {\n",
-    "      'question': 'Suggested areas for parents to positively encourage at home',\n",
-    "      'type': 'text_area',\n",
-    "      'response': None\n",
-    "  },\n",
-    "  {\n",
-    "      'question': 'Potential areas',\n",
+    "      'question': 'Commendable Areas',\n",
     "      'type': 'text_area',\n",
     "      'response': None\n",
     "  },\n",
@@ -500,8 +491,9 @@
     "  if not output.get(row['DOMAIN']):\n",
     "    output[row['DOMAIN']] = {}\n",
     "  if not output[row['DOMAIN']].get(row['SUB CATEGORY']):\n",
-    "    output[row['DOMAIN']][row['SUB CATEGORY']] = free_text_questions\n",
+    "    output[row['DOMAIN']][row['SUB CATEGORY']] = copy.copy(free_text_questions)\n",
     "  output[row['DOMAIN']][row['SUB CATEGORY']].insert(0, {'question': row['SKILL'], 'response': None})\n",
+    "\n",
     "\n",
     "json.dump(output, open('updatedQuestions.json', 'w'), indent=4)\n"
    ]
